# testy-snek

./: .coverage  .gitignore  .replit  MANIFEST.in  README.md  desktop-test  main.py  pyproject.toml  run_tests.py  setup.py
example_reports/: report.html
examples/: conftest.py  demo_app.py  sample_app.py  test_sample_app.py
examples/tests/: conftest.py  test_demo_app.py  test_simple_note_app.py
pydesktop_test/: __init__.py  assertions.py  autogen.py  cli.py  config.py  conftest.py  core.py  dashboard.py  fixtures.py  plugins.py  reporting.py  utils.py
pydesktop_test.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test_reports/: report.html  test_report_20250421_141011.json  test_report_20250421_141023.json
tests/test_basic/: test_config.py  test_dashboard.py  test_gui_example.py
